[package]
name = "circle_collision"
version = "0.1.0"
authors = ["WillDeJs <wilrad1691@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.3.0"
num-traits = "0.2.14"
winit = "0.25"
winit_input_helper = "*"
rand = "0.8.3"